@@ -52,7 +52,6 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.PrintStream;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.HashMap;
@@ -370,7 +369,8 @@ public final class CommandLineRunnerTest {
 
     // An exit code of -1 indicates that the command line options were bad
     assertThat(exitCodes).containsExactly(-1);
-    assertThat(errReader.toString()).contains("Unknown diagnostic group: 'unknownDiagnosticGroup'");
+    assertThat(errReader.toString(UTF_8))
+        .contains("Unknown diagnostic group: 'unknownDiagnosticGroup'");
   }
 
   @Test
@@ -1706,7 +1706,7 @@ public final class CommandLineRunnerTest {
   public void testSymlink() throws IOException {
     FlagEntry<JsSourceType> jsFile1 = createJsFile("test1", "var a;");
     Path symlink1 = Files.createTempDir().toPath().resolve("symlink1");
-    Path jscompTempDir = Paths.get(jsFile1.getValue()).getParent();
+    Path jscompTempDir = Path.of(jsFile1.getValue()).getParent();
     java.nio.file.Files.createSymbolicLink(symlink1, jscompTempDir);
     compileFiles("var a;", new FlagEntry<>(JsSourceType.JS, symlink1.toString()));
   }
@@ -2095,7 +2095,7 @@ public final class CommandLineRunnerTest {
     setFilename(0, "foo/bar.js");
     String expected = "var module$foo$bar={default:{}};module$foo$bar.default.test=1;";
     test("exports.test = 1", expected);
-    assertThat(outReader.toString()).isEqualTo(expected + "\n");
+    assertThat(outReader.toString(UTF_8)).isEqualTo(expected + "\n");
   }
 
   @Test
@@ -2106,7 +2106,7 @@ public final class CommandLineRunnerTest {
     setFilename(0, "foo/bar.js");
     test("exports.test = 1", "var module$foo$bar={default: {}}; module$foo$bar.default.test = 1;");
     // With modules=auto no direct output is created.
-    assertThat(outReader.toString()).isEmpty();
+    assertThat(outReader.toString(UTF_8)).isEmpty();
   }
 
   @Test
